[package]
name = "jwt"
version = "0.1.0"
edition = "2024"

[dependencies]
time = { workspace = true }
http_utils = { workspace = true }
axum = { workspace = true }
axum-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
jsonwebtoken = { workspace = true }
http = { workspace = true }
chrono = { workspace = true }
scru128 = {workspace = true}
tokio = {workspace = true}
