[package]
name = "scheduler"
version = "0.1.0"
edition = "2024"

[dependencies]
types = {workspace = true}
dioxus = {version = "0.7.0-rc.2", optional = true}
channel = {workspace = true}
timer = {workspace = true}
futures = {workspace = true}
tracing = {workspace = true}
thiserror = {workspace = true}

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = {workspace = true}


[features]
dioxus = ["dep:dioxus"]
#native = ["dep:tokio"]
#web = ["dep:async-channel"]