[package]
name = "timer"
version = "0.1.0"
edition = "2024"

[dependencies]
pin-project = {workspace = true}

[target.'cfg(target_arch = "wasm32")'.dependencies]
gloo = {workspace = true, features = ["timers", "futures"]}
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = {workspace = true}
